erinfox.io/css/style.css
@media only screen and (max-width: 320px) {

   body { font-size: 2em; }
}

h5{
    font-size: 1.4em;
}


body{
  font-family: 'Open Sans', sans-serif;
  margin: 0;
}


ul {
    text-align: center;
}


li {
    display: inline;
}


li a {
  padding: 14px 16px;
  text-decoration: none;
  color:gray;
}

a:hover{
  color:#D4A190;
}

a{
    text-decoration: none;
    color:black;
}


h1 {
  display: flex;
  justify-content: center;
  padding-top:50px;
  font-size: 4.5vw;
}

h4{
  font-size: 3.5vw;
  margin-top: 15px;
  margin-bottom: 10px;
  text-align: center;
}


p{
  color:gray;
  text-align: center;
}

.about_and_skills{
  width:100%;
  height:357px;
  border-width: 1px;

}
.about-section{
  width: 40%;
  float:left;
  padding-left: 10%;
  text-align: center;

}

.skills-section{
  width:40%;
  float:right;
  padding-right: 5%;
  text-align: center;
}


.skills img{
  width: 80px;
  height: auto;
  align-items: center;
}


/*.projects{
  background-color: #E8E8E8;
  padding:0;
}*/

.portfolio-section {
  padding-top: 0%;
  margin-top: 0;

}

.portfolio-section img{
  width: auto;
  height: 200px;
  padding: 30px;



}

.portfolio_pics{
     display: flex;
  justify-content: center;
  flex-direction: row;
  flex-wrap: wrap;
  background-color: #E8E8E8;
}

















.contact-section {
  text-align: center;
}

.socials{
display: flex;
justify-content: center;
align-items: flex-end;
padding-top:5px;
}

.socials .linkedin {
  width: 45px;
  height: 45px;
  padding: 2px;
}

.socials .github {
  width: 45px;
  height: 45px;
  padding: 2px;
}

.socials .instagram {
  width: 45px;
  height: 45px;
  padding: 2px;
}

.socials .mail{
  width: 45px;
  height: 45px;
  padding: 2px;
}

